--- a/index.html
+++ b/index.html
@@ -534,6 +534,60 @@ I’m a Pune-based UI/UX and Graphic Designer with hands-on experience in M-comm
             </div>
         </div>
 
+
+         <div class="column entry" data-category="graphics">
+            <a href="images/Shoes Ad Flyer.png" class="entry__link glightbox" data-glightbox="title: .; description: .entry__desc-07">
+                <div class="entry__thumb">
+                    <img src="images/Shoes Ad Flyer.png" alt="">
+                </div>
+                <div class="entry__info">
+                    <h4 class="entry__title">Nike Shoes Design</h4>
+                    <div class="entry__cat">Graphic Design</div>
+                </div>d:\NJ stock\Design Files\Air Pods Redesign\Air Pods Redesign@3x.png
+            </a>
+            <div class="glightbox-desc entry__desc-07">
+                <p>
+                    <!-- Poster and branding work for a wooden decor brand. -->
+                    <!-- <a href="https://www.behance.net/"target="_blank" rel="noopener noreferrer">View on Behance</a> -->
+                </p>
+            </div>
+        </div>
+
+            <div class="column entry" data-category="graphics">
+            <a href="images/FINAL POSTER jpg.png" class="entry__link glightbox" data-glightbox="title: .; description: .entry__desc-07">
+                <div class="entry__thumb">
+                    <img src="images/FINAL POSTER jpg.png" alt="">
+                </div>
+                <div class="entry__info">
+                    <h4 class="entry__title">Ideathon Event Design </h4>
+                    <div class="entry__cat">Graphic Design</div>
+                </div>d:\NJ stock\Design Files\Air Pods Redesign\Air Pods Redesign@3x.png
+            </a>
+            <div class="glightbox-desc entry__desc-07">
+                <p>
+                    <!-- Poster and branding work for a wooden decor brand. -->
+                    <!-- <a href="https://www.behance.net/"target="_blank" rel="noopener noreferrer">View on Behance</a> -->
+                </p>
+            </div>
+        </div>
+
+           <div class="column entry" data-category="graphics">
+            <a href="images/VelocITt Flyer.png" class="entry__link glightbox" data-glightbox="title: .; description: .entry__desc-07">
+                <div class="entry__thumb">
+                    <img src="images/VelocITt Flyer.png" alt="">
+                </div>
+                <div class="entry__info">
+                    <h4 class="entry__title"> E-commerceFlyer Design </h4>
+                    <div class="entry__cat">Graphic Design</div>
+                </div>d:\NJ stock\Design Files\Air Pods Redesign\Air Pods Redesign@3x.png
+            </a>
+            <div class="glightbox-desc entry__desc-07">
+                <p>
+                    <!-- Poster and branding work for a wooden decor brand. -->
+                    <!-- <a href="https://www.behance.net/"target="_blank" rel="noopener noreferrer">View on Behance</a> -->
+                </p>
+            </div>
+        </div>
         
           <div class="column entry" data-category="graphics">
             <a href="images/design graphics/VelocITt social flyers.png" class="entry__link glightbox" data-glightbox="title: .; description: .entry__desc-07">
