--- a/index.html
+++ b/index.html
@@ -331,8 +331,7 @@ I’m a Pune-based UI/UX and Graphic Designer with hands-on experience in M-comm
             </a>
             <div class="glightbox-desc entry__desc-02">
                 <p>
-                    Poster and branding work for a wooden decor brand.
-                    <a href="https://velocitt.in/"target="_blank" rel="noopener noreferrer">View on Behance</a>
+.                    <a href="https://velocitt.in/"target="_blank" rel="noopener noreferrer">View on Behance</a>
                 </p>
             </div>
         </div>
@@ -350,8 +349,7 @@ I’m a Pune-based UI/UX and Graphic Designer with hands-on experience in M-comm
             </a>
             <div class="glightbox-desc entry__desc-03">
                 <p>
-                    Poster and branding work for a wooden decor brand.
-                    <a href="https://www.behance.net/gallery/226336829/Delivery-Partner-App" target="_blank" rel="noopener noreferrer">View on Behance</a>
+.                    <a href="https://www.behance.net/gallery/226336829/Delivery-Partner-App" target="_blank" rel="noopener noreferrer">View on Behance</a>
                 </p>
             </div>
         </div>
@@ -369,11 +367,28 @@ I’m a Pune-based UI/UX and Graphic Designer with hands-on experience in M-comm
             </a>
             <div class="glightbox-desc entry__desc-04">
                 <p>
-                    Poster and branding work for a wooden decor brand.
-<a href="https://www.behance.net/gallery/226397299/VRetail-Web-Design" target="_blank" rel="noopener noreferrer">View on Behance</a>
+.<a href="https://www.behance.net/gallery/226397299/VRetail-Web-Design" target="_blank" rel="noopener noreferrer">View on Behance</a>
                 </p>
             </div>
         </div>
+
+            <div class="column entry" data-category="graphics">
+            <a href="images/Chanchal_Abhang_Assignment@2x[1].png" class="entry__link glightbox" data-glightbox="title: .; description: .entry__desc-04">
+                <div class="entry__thumb">
+                    <img src="images/Chanchal_Abhang_Assignment@2x[1].png" alt="">
+                </div>
+                <div class="entry__info">
+                    <h4 class="entry__title">Infographic Design on AI-Driven Scams</h4>
+                    <div class="entry__cat">Graphic Design</div>
+                </div>
+            </a>
+            <div class="glightbox-desc entry__desc-04">
+                <p>
+      
+                </p>
+            </div>
+        </div> -->
+
 
 
 
@@ -389,7 +404,7 @@ I’m a Pune-based UI/UX and Graphic Designer with hands-on experience in M-comm
             </a>
             <div class="glightbox-desc entry__desc-04">
                 <p>
-                    Poster and branding work for a wooden decor brand.
+                    .
 <!-- <a href="https://www.behance.net/gallery/226397299/VRetail-Web-Design" target="_blank" rel="noopener noreferrer">View on Behance</a> -->
                 </p>
             </div>
@@ -409,8 +424,7 @@ I’m a Pune-based UI/UX and Graphic Designer with hands-on experience in M-comm
             </a>
             <div class="glightbox-desc entry__desc-05">
                 <p>
-                    Poster and branding work for a wooden decor brand.
-                    <a href="https://www.behance.net/"target="_blank" rel="noopener noreferrer">View on Behance</a>
+.                    <a href="https://www.behance.net/"target="_blank" rel="noopener noreferrer">View on Behance</a>
                 </p>
             </div>
         </div>
@@ -908,8 +922,7 @@ I’m a Pune-based UI/UX and Graphic Designer with hands-on experience in M-comm
                         <span>+</span>
                     </div>
                     <h5>Positive Feedback</h5>
-                    <p>                    Poster and branding work for a wooden decor brand.
-
+                    <p>.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel harum magni quae voluptate error 
                     quo repellendus inventore laborum ex veniam.
                     </p> -->
